trunk/Archive2/c1/0b1be7eed8f060/output
+ clang++ -O3 -stdlib=libc++ -std=c++1y -Wall -Wextra -pedantic main.cpp
main.cpp:3:6: error: no type named 'plus' in namespace 'std'
std::plus<> foo;
~~~~~^
main.cpp:3:10: error: expected unqualified-id
std::plus<> foo;
         ^
2 errors generated.
