trunk/Archive2/c1/0b1be7eed8f060/main.cpp
#include <string>
//#include <functional>
std::plus<> foo;
int main() {}